Skip to content
GitLab
  • Menu
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • xserver xserver
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 888
    • Issues 888
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 113
    • Merge requests 113
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • xorg
  • xserverxserver
  • Issues
  • #1305
Closed
Open
Created Feb 11, 2022 by Alexander Zvegintsev@zvegintsev.alex

XWayland: root size change notify behavior is not consistent

Affected version

Fedora 36 (Rawhide) / GNOME Shell 42.alpha

Bug summary

I did a follow up testing after fixing !731 (merged) and noticed a few issues:

  1. There is no event when you are trying to change to native resolution from another.
  2. XRRScreenChangeNotifyEvent always has native resolution reported.
  3. It might be a minor one, but on X11 session there is no events reported if you are trying to change to the same resolution.

Steps to reproduce

screenSizeChangeEvent.c

Run gcc screenSizeChangeEvent.c -o screenSizeChangeEvent -lX11 -lXrandr && ./screenSizeChangeEvent

Relevant logs, screenshots, screencasts etc.

Please see logs from the test above. I've added some comments to them started with ////.

xwl.log XWayland session

x11.log X11 session

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking